logo changed to svg

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="d-flex justify-content-between">
                 <a href="" class="my-auto">
-                    <img src="assets/img/logo.png" class="img-fluid logo" alt="">
+                    <img src="assets/img/illustrations/logo.svg" class="img-fluid logo" alt="">
                 </a>
                 <div class="menu my-auto d-flex gap-2">
                     <div class="nav-menu my-auto">
