portrait compressed ans changed to webp format

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis tenetur
                     voluptatem ut
                     mollitia illo id necessitatibus quaerat sed facilis numquam!</p>
-                <img src="assets/img/portrait.jpg" class="img-fluid portrait" alt="">
+                <img src="assets/img/portrait.webp" class="img-fluid portrait" alt="">
             </div>
         </div>
     </section>
