ajout de la section about et ces styles

--- a/index.html
+++ b/index.html
@@ -47,6 +47,33 @@
         </div>
     </section>
 
+    <!-- about -->
+    <section id="about">
+        <div class="container text-center  py-5">
+            <div class="about mx-auto text-light py-5">
+                <div class="logo-about">
+                    <img src="assets/img/icons/about.svg" alt="">
+                </div>
+                <h1>About</h1>
+                <p class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis voluptatum
+                    possimus,
+                    atque, maiores
+                    quod ducimus debitis recusandae dolore dolorum asperiores iure aperiam ratione obcaecati. Inventore
+                    quos
+                    accusamus non quasi eum accusantium impedit, natus iste doloribus nesciunt facilis nulla reiciendis
+                    magnam, perferendis nihil dolorum? Nam aut, at numquam atque soluta explicabo.</p>
+                <a href="">
+                    <button class="btn-tr-primary">Me contacter</button>
+                </a>
+            </div>
+        </div>
+    </section>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
 </body>
 
 </html>
