--- a/index.html
+++ b/index.html
@@ -15,27 +15,28 @@
 
 <body>
 
-    <!-- navbar -->
-    <nav class="py-4">
-        <div class="container">
-            <div class="d-flex justify-content-between">
-                <a href="" class="my-auto">
-                    <img src="assets/img/illustrations/logo.svg" class="img-fluid logo" alt="">
-                </a>
-                <div class="menu my-auto d-flex gap-2">
-                    <div class="nav-menu my-auto">
-                        <a class="nav-link" href="">About</a>
-                    </div>
-                    <div class="nav-menu btn-menu">
-                        <a class="nav-link" href="">Port-folio</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
+
 
     <!-- hero -->
     <section id="hero">
+        <!-- navbar -->
+        <nav class="py-4">
+            <div class="container">
+                <div class="d-flex justify-content-between">
+                    <a href="" class="my-auto">
+                        <img src="assets/img/illustrations/logo.svg" class="img-fluid logo" alt="">
+                    </a>
+                    <div class="menu my-auto d-flex gap-2">
+                        <div class="nav-menu my-auto">
+                            <a class="nav-link" href="">About</a>
+                        </div>
+                        <div class="nav-menu btn-menu">
+                            <a class="nav-link" href="">Port-folio</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
         <div class="container text-center py-4">
             <div class="hero mx-auto">
                 <h1>Hello World!</h1>
@@ -54,8 +55,9 @@
                 <div class="logo-about">
                     <img src="assets/img/icons/about.svg" alt="">
                 </div>
-                <h1>About</h1>
-                <p class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis voluptatum
+                <h1 class="about-title">About</h1>
+                <p class="about-text text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
+                    voluptatum
                     possimus,
                     atque, maiores
                     quod ducimus debitis recusandae dolore dolorum asperiores iure aperiam ratione obcaecati. Inventore
@@ -63,7 +65,7 @@
                     accusamus non quasi eum accusantium impedit, natus iste doloribus nesciunt facilis nulla reiciendis
                     magnam, perferendis nihil dolorum? Nam aut, at numquam atque soluta explicabo.</p>
                 <a href="">
-                    <button class="btn-tr-primary">Me contacter</button>
+                    <button class="btn-tr-primary about-button">Me contacter</button>
                 </a>
             </div>
         </div>
