--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="/assets/img/illustrations/logo.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tolojanahary - Portfolio</title>
     <link
