--- a/index.html
+++ b/index.html
@@ -2,44 +2,46 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="/assets/img/illustrations/logo.svg">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tolojanahary - Portfolio</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/x-icon" href="/assets/img/logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Tolojanahary - Port-folio</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="components/components/assets/css/style.css">
+    <link rel="stylesheet" href="components/components/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="components/components/bootstrap/css/bootstrap.rtl.min.css">
+    <script src="components/components/bootstrap/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="components/components/bootstrap_theme/custom.scss">
 </head>
 
 <body>
-
-
-
     <!-- hero -->
     <section id="hero">
         <!-- navbar -->
         <nav class="py-4">
             <div class="container">
-                <div class="d-flex justify-content-between">
-                    <a href="" class="my-auto">
-                        <img src="assets/img/illustrations/logo.svg" class="img-fluid logo" alt="">
-                    </a>
+                <div class="d-flex justify-content-between"> <a href="" class="my-auto"> <img
+                            src="assets/img/illustrations/logo.svg" class="img-fluid logo" alt=""> </a>
                     <div class="menu my-auto d-flex gap-2">
-                        <div class="nav-menu my-auto">
-                            <a class="nav-link" href="">About</a>
+                        <div class="nav-menu my-auto"> <a class="nav-link" href="">About</a>
                         </div>
-                        <div class="nav-menu btn-menu">
-                            <a class="nav-link" href="">Port-folio</a>
+                        <div class="nav-menu btn-menu"> <a class="nav-link" href="">Port-folio</a>
                         </div>
                     </div>
                 </div>
             </div>
         </nav>
-        <div class="container text-center py-4">
-            <div class="hero mx-auto">
+        <div class="container d-flex text-center py-5">
+            <div class="hero d-flex justify-content-center align-items-center mx-auto">
                 <h1>Hello World!</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis tenetur
                     voluptatem ut
@@ -48,35 +50,101 @@
             </div>
         </div>
     </section>
-
     <!-- about -->
-    <section id="about">
-        <div class="container text-center  py-5">
+    <section id="about" class="d-flex">
+        <div class="container d-flex justify-content-center align-items-center text-center  py-5">
             <div class="about mx-auto text-light py-5">
-                <div class="logo-about">
+                <div class="logo-about" data-aos="fade-left">
                     <img src="assets/img/icons/about.svg" alt="">
                 </div>
-                <h1 class="about-title">About</h1>
-                <p class="about-text text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
+                <h1 class="about-title" data-aos="fade-up" data-aos-duration="1000">About</h1>
+                <p class="about-text text-light" data-aos="fade-up" data-aos-duration="2000">Lorem ipsum dolor sit, amet
+                    consectetur adipisicing
+                    elit. Facilis
                     voluptatum
                     possimus,
                     atque, maiores
                     quod ducimus debitis recusandae dolore dolorum asperiores iure aperiam ratione obcaecati. Inventore
                     quos
                     accusamus non quasi eum accusantium impedit, natus iste doloribus nesciunt facilis nulla reiciendis
-                    magnam, perferendis nihil dolorum? Nam aut, at numquam atque soluta explicabo.</p>
-                <a href="">
-                    <button class="btn-tr-primary about-button">Me contacter</button>
-                </a>
+                    magnam, perferendis nihil dolorum? Nam aut, at numquam atque soluta explicabo.</p> <a href=""
+                    data-aos="fade-up" data-aos-duration="3000"> <button class="btn-tr-primary about-button">Me
+                        contacter</button> </a>
             </div>
         </div>
     </section>
-
-
+    <section
+        style="background-image:url('https://cdn.wallpapersafari.com/35/47/5BrQhk.jpg'); background-repeat: no-repeat; background-size: cover; background-position: right center;"
+        data-pgc="testimonials-2" data-pgc-field="bg-testimonials">
+        <div class="container py-5">
+            <div class="mb-5" data-pgc-field="titre-testimonials">
+                <h2 class="text-center fw-bold text-light" data-aos="fade-up">Technologies</h2>
+                <p class="text-center mt-3 col-lg-8 text-light mx-auto" data-aos="fade-up" data-aos-duration="1000">
+                    Lorem ipsum, dolor sit amet consectetur
+                    adipisicing elit. Possimus, sapiente laudantium tempore expedita repellat consequatur blanditiis ea
+                    optio.&nbsp;</p>
+            </div>
+            <div class="testimonials-container" data-pgc-field="testimonial-container">
+                <div class="row">
+                    <div class="col-lg-4 px-3 text-center" data-pgc-field="testimonial" data-aos="fade-right"
+                        data-aos-duration="1000" data-aos-offset="200">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKRK2iQzTt-RsNQLONtf4G-28LjS-bRCACfA&s"
+                            class="profil-testimonial" alt="">
+                        <div class="shadow-card card-testimonials bg-light px-4 py-5 text-center">
+                            <h5 class="fw-bold py-3">Web Design UI/UX</h5>
+                            <div class="pb-3">@ALECTHOMPSON</div>
+                            <div class="testimonials-content">
+                                <div class="comment">
+                                    <h1 class="russo-one-font">"</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex autem culpa id
+                                        sapiente hic, iste eum eius earum temporibus qui.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 px-3 text-center" data-pgc-field="testimonial" data-aos="fade-up"
+                        data-aos-duration="1000">
+                        <img src="https://cdn-icons-png.flaticon.com/512/1804/1804179.png" class="profil-testimonial"
+                            alt="">
+                        <div class="shadow-card card-testimonials bg-light px-4 py-5 text-center">
+                            <h5 class="fw-bold py-3">Graphic Design</h5>
+                            <div class="pb-3">@GINAANDREW</div>
+                            <div class="testimonials-content">
+                                <div class="comment">
+                                    <h1 class="russo-one-font">"</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex autem culpa id
+                                        sapiente hic, iste eum eius earum temporibus qui.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 px-3 text-center" data-pgc-field="testimonial" data-aos="fade-left"
+                        data-aos-duration="2000">
+                        <img src="https://cdn-icons-png.flaticon.com/512/4373/4373396.png" class="profil-testimonial"
+                            alt="">
+                        <div class="shadow-card card-testimonials bg-light px-4 py-5 text-center">
+                            <h5 class="fw-bold py-3">Traitement A/V</h5>
+                            <div class="pb-3">@GEORGEWEST</div>
+                            <div class="testimonials-content">
+                                <div class="comment">
+                                    <h1 class="russo-one-font">"</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex autem culpa id
+                                        sapiente hic, iste eum eius earum temporibus qui.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-</body>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
