--- a/index.html
+++ b/index.html
@@ -58,18 +58,24 @@
                     <img src="assets/img/icons/about.svg" alt="">
                 </div>
                 <h1 class="about-title" data-aos="fade-up" data-aos-duration="1000">About</h1>
-                <p class="about-text text-light" data-aos="fade-up" data-aos-duration="2000">Lorem ipsum dolor sit, amet
-                    consectetur adipisicing
-                    elit. Facilis
-                    voluptatum
-                    possimus,
-                    atque, maiores
-                    quod ducimus debitis recusandae dolore dolorum asperiores iure aperiam ratione obcaecati. Inventore
-                    quos
-                    accusamus non quasi eum accusantium impedit, natus iste doloribus nesciunt facilis nulla reiciendis
-                    magnam, perferendis nihil dolorum? Nam aut, at numquam atque soluta explicabo.</p> <a href=""
-                    data-aos="fade-up" data-aos-duration="3000"> <button class="btn-tr-primary about-button">Me
-                        contacter</button> </a>
+                <div data-aos="fade-up" data-aos-duration="1500">
+                    <p class="about-text text-light">Lorem ipsum dolor sit,
+                        amet
+                        consectetur adipisicing
+                        elit. Facilis
+                        voluptatum
+                        possimus,
+                        atque, maiores
+                        quod ducimus debitis recusandae dolore dolorum asperiores iure aperiam ratione obcaecati.
+                        Inventore
+                        quos
+                        accusamus non quasi eum accusantium impedit, natus iste doloribus nesciunt facilis nulla
+                        reiciendis
+                        magnam, perferendis nihil dolorum? Nam aut, at numquam atque soluta explicabo.</p> <a href="">
+                        <button class="btn-tr-primary about-button">Me
+                            contacter</button> </a>
+                </div>
+
             </div>
         </div>
     </section>
@@ -118,8 +124,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 px-3 text-center" data-pgc-field="testimonial" data-aos="fade-left"
-                        data-aos-duration="2000">
+                    <div class="col-lg-4 px-3 text-center" data-pgc-field="testimonial" data-aos="fade-down"
+                        data-aos-duration="1000">
                         <img src="https://cdn-icons-png.flaticon.com/512/4373/4373396.png" class="profil-testimonial"
                             alt="">
                         <div class="shadow-card card-testimonials bg-light px-4 py-5 text-center">
@@ -138,6 +144,14 @@
             </div>
         </div>
     </section>
+    <section>
+        <footer>
+            <div class="text-center py-3 bg-dark">
+                Tolojanahary - Port-folio | Copyright &copy; 2024 | All rights reserved
+            </div>
+        </footer>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
